[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points.skimage_backends]
# This entrypoint points to a function that can retrieve
# the actual implementation of a function given its name.
# It can be slow to import.
# This is how implementations are located by the dispatching
# mechanism.
phony = "scikit_image_backend_phony.implementations:get"

[project.entry-points.skimage_backend_infos]
# This entrypoint only provides information about
# the backend and has to be fast to call from the frontend
# This means it should not perform a lot of computation
# or trigger large imports
phony = "scikit_image_backend_phony.information:info"

[project]
name = "scikit-image-backend-phony"
version = "0.0.1"
