[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points.skimage_backends]
# This entrypoint points to a namespace that contains two functions.
# The `get_implementation` function is how implementations are located by the
# dispatching mechanism.
# The `can_has` function is used by the dispatching mechanism to find a
# suitable backend by querying each in turn.
# The entrypoint may be slow to import.
phony = "scikit_image_backend_phony.implementations"

[project.entry-points.skimage_backend_infos]
# This entrypoint only provides information about
# the backend and has to be fast to call from the frontend
# This means it should not perform a lot of computation
# or trigger large imports
phony = "scikit_image_backend_phony.information:info"

[project]
name = "scikit-image-backend-phony"
version = "0.0.1"
